Feat add major changes to codebase
- add minor changes to docker files
- add client app home page
- configure routing
- add translation
- add theme change

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ﻿# Connection string for the database
-ASPNETCORE_APP_DB: 'User ID=postgres;Password=postgres;Server=app_db;Port=5430;Database=SampleDriverDb; Integrated Security=true;Pooling=true;'
+ASPNETCORE_APP_DB: 'User ID=postgres;Password=postgres;Server=app-db;Port=5430;Database=AppDb; Pooling=true;Keepalive=300;CommandTimeout=300;Timeout=300;Trust Server Certificate=true;'
 # Port for the backend application
 ASPNETCORE_APP_PORT: 8080
 # Swagger configuration
