--- a/SampleAspNetReactDockerApp.Client/Dockerfile
+++ b/SampleAspNetReactDockerApp.Client/Dockerfile
@@ -1,18 +1,14 @@
-﻿# Step 1: Build the app
-FROM node:latest as builder
+﻿FROM node:latest as build-step
 
 WORKDIR /app
 COPY package*.json ./
-
 RUN npm install
 COPY . .
 RUN npm run build
 
-## Step 2: Set up the production environment and run the nginx server
-FROM nginx:stable-alpine
+FROM nginx:alpine
 
-COPY --from=builder /app/dist /usr/share/nginx/html
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
-
+COPY --from=build-step /app/dist /usr/share/nginx/html
+COPY default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
