App Enhancements: Login Security, Dashboard Access, & UI Updates
This update brings enhancements to the ASP.NET Core React Docker app, focusing on user authentication, enriched UI components, and improved localization. Highlights include:

- Secure Login Page: Introduces a secure authentication process for user access.
- Authenticated Dashboard: Adds a dashboard with data accessible post-authentication.
- Localization Enhancements: Updates to English and Polish translations.
- New UI Components: Implements new components like data-table.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ CLIENT_APP_PORTS: '3000:80'
 # Port for the database
 POSTGRES_PORT: 5430
 
+# AspNetCore SpaProxy configuration
+ASPNETCORE_URLS=https://localhost:8080
+ASPNETCORE_ENVIRONMENT=Development
+ASPNETCORE_HOSTINGSTARTUPASSEMBLIES=Microsoft.AspNetCore.SpaProxy
